--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -20,6 +20,14 @@
             <ion-label>{{ link.title }}</ion-label>
           </ion-item>
         </ion-menu-toggle>
+        <ion-menu-toggle menu="m1">
+          <ion-item
+            lines="none"
+            (click)="logout()">
+            <ion-icon name="exit" slot="start"></ion-icon>
+            <ion-label>Logout</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
       </ion-list>
     </ion-content>
 
