--- a/client/src/app/groups/group-manage/group-manage.page.html
+++ b/client/src/app/groups/group-manage/group-manage.page.html
@@ -1,17 +1,21 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/groups"></ion-back-button>
+      <ion-back-button defaultHref="/groups/detail/{{ groupId }}"></ion-back-button>
     </ion-buttons>
-    <ion-title>Manage {{ group.name }}</ion-title>
+    <ion-title>{{ group ? group.name : null }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-grid>
+
     <ion-row>
       <ion-col size="12">
-        <ion-card color="primary" (click)="onSelect('products')">
+        <ion-card
+          *ngIf="!loading_items"
+          color="primary"
+          (click)="onSelect('products')">
           <ion-card-header class="ion-text-center">
             <ion-card-title>Manage Available Products</ion-card-title>
           </ion-card-header>
@@ -21,9 +25,29 @@
         </ion-card>
       </ion-col>
     </ion-row>
+
+    <ion-row>
+      <ion-col size="12">
+        <ion-card
+          *ngIf="!loading_summary"
+          color="primary"
+          (click)="onSelect('summary')">
+          <ion-card-header class="ion-text-center">
+            <ion-card-title>Get Summary</ion-card-title>
+          </ion-card-header>
+          <ion-card-content class="ion-text-center">
+            Check Summary of Last Order
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+
     <ion-row>
       <ion-col size="6">
-        <ion-card color="secondary" (click)="onSelect('users')">
+        <ion-card
+          *ngIf="!loading_members"
+          color="secondary"
+          (click)="onSelect('users')">
           <ion-card-header>
             <ion-card-title class="ion-text-center">Manage Group Members</ion-card-title>
           </ion-card-header>
@@ -32,8 +56,12 @@
           </ion-card-content>
         </ion-card>
       </ion-col>
+
       <ion-col size="6">
-        <ion-card color="light" (click)="onSelect('infos')">
+        <ion-card
+          *ngIf="!loading_infos"
+          color="light"
+          (click)="onSelect('infos')">
           <ion-card-header>
             <ion-card-title class="ion-text-center">Manage Group Details</ion-card-title>
           </ion-card-header>
@@ -46,21 +74,29 @@
 
     <ion-row>
       <ion-col size="12">
-        <ion-card>
+        <ion-card *ngIf="managing">
           <ion-card-content [ngSwitch]="managing">
             <app-group-infos
               *ngSwitchCase="'infos'"
               [group]="group"
+              (done)="onDone($event)"
               (cancelled)="onCancel()"></app-group-infos>
             <app-group-products
               *ngSwitchCase="'products'"
               [group]="group"
+              [items]="items"
+              (done)="onDone($event)"
+              (updated)="onItemsUpdated()"
               (cancelled)="onCancel()"></app-group-products>
             <app-group-users
               *ngSwitchCase="'users'"
-              [group]="group"
+              [members]="members"
               (cancelled)="onCancel()"></app-group-users>
-            <p *ngSwitchDefault>Click a Card to Update</p>
+            <app-group-summary
+              *ngSwitchCase="'summary'"
+              [summaryByUser]="summaryByUser"
+              [summaryByItem]="summaryByItem"
+              (cancelled)="onCancel()"></app-group-summary>
           </ion-card-content>
         </ion-card>
       </ion-col>
