--- a/client/src/app/groups/group-manage/group-products/group-products.component.html
+++ b/client/src/app/groups/group-manage/group-products/group-products.component.html
@@ -1,20 +1,7 @@
-<!-- <form [formGroup]="productsForm" (ngSubmit)=onSaveChanges()> -->
-<form [formGroup]="productsForm">
+<form [formGroup]="itemsForm">
   <ion-grid>
-    <!-- <ion-row>
-      <ion-col size="12" size-sm="6" offset-sm="3">
-        <ion-button
-          color="secondary"
-          type="button"
-          (click)="onCancel()">Cancel</ion-button>
-        <ion-button
-          color="primary"
-          type="submit">Save</ion-button>
-      </ion-col>
-    </ion-row> -->
-
-    <ion-row *ngFor="let product of products"
-      [formGroupName]="product.name">
+    <ion-row *ngFor="let item of items"
+      [formGroupName]="item.name">
       <ion-col size="12" size-sm="6" offset-sm="3">
         <ion-item>
           <ion-input
@@ -30,6 +17,7 @@
             type="number"
             formControlName="amount"></ion-input>
         </ion-item>
+        <ion-icon name="trash-outline" (click)="onDeleteItem(item.id)"></ion-icon>
       </ion-col>
     </ion-row>
 
@@ -58,6 +46,7 @@
         <ion-button
           color="primary"
           type="button"
+          disabled="{{ items.length < 1 }}"
           (click)="onSaveChanges()">Save</ion-button>
         <ion-button
           color="primary"
