--- a/client/src/app/groups/group-manage/group-products/new-product-modal/new-product-modal.component.html
+++ b/client/src/app/groups/group-manage/group-products/new-product-modal/new-product-modal.component.html
@@ -12,8 +12,9 @@
 <ion-content>
 
   <form #f="ngForm" (ngSubmit)="onAddProduct()">
-    <h2>Add New Product</h2>
+    <h2 class="ion-text-center">Add New Product</h2>
     <ion-grid>
+
       <ion-row>
         <ion-col size="12" size-sm="6" offset-sm="3">
           <ion-item>
@@ -26,6 +27,19 @@
           </ion-item>
         </ion-col>
       </ion-row>
+
+      <ion-row>
+        <ion-col size="12" size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Description</ion-label>
+            <ion-textarea
+              [ngModel]="productDescription"
+              name="product-description"
+              required></ion-textarea>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
       <ion-row>
         <ion-col size="12" size-sm="6" offset-sm="3">
           <ion-item>
@@ -37,6 +51,20 @@
           </ion-item>
         </ion-col>
       </ion-row>
+
+      <ion-row>
+        <ion-col size="12" size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Currency</ion-label>
+            <ion-input
+              type="text"
+              [ngModel]="productCurrency"
+              name="product-currency"
+              required></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
       <ion-row>
         <ion-col size="12" size-sm="6" offset-sm="3">
           <ion-item>
@@ -48,6 +76,7 @@
           </ion-item>
         </ion-col>
       </ion-row>
+
       <ion-row>
         <ion-col size="12" size-sm="6" offset-sm="3">
           <ion-button
