--- a/client/src/app/groups/group-manage/group-users/group-users.component.html
+++ b/client/src/app/groups/group-manage/group-users/group-users.component.html
@@ -6,14 +6,11 @@
           color="secondary"
           type="button"
           (click)="onCancel()">Cancel</ion-button>
-        <!-- <ion-button
-          color="primary"
-          type="submit">Save</ion-button> -->
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="12" size-sm="6" offset-sm="3">
-        <ion-item *ngFor="let user of groupUsers">
+        <ion-item *ngFor="let user of members">
           <ion-text>{{ user.name }}</ion-text>
           <ion-button slot="end" (click)="onDelete(user.id)">
             <ion-icon name="trash-outline"></ion-icon>
