client: fixed UI loadingCtrl && UX for unavailable options

--- a/client/src/app/groups/group-detail/group-detail.page.html
+++ b/client/src/app/groups/group-detail/group-detail.page.html
@@ -26,6 +26,7 @@
 
           <ion-item
             [detail]="orderIsAllowed"
+            [ngClass]="orderIsAllowed ? '' : 'noorder'"
             (click)="orderIsAllowed ? onNavigateToPlaceOrder() : null">
             <ion-label>Place an Order</ion-label>
           </ion-item>
