--- a/client/src/app/groups/group-manage/group-products/new-product-modal/new-product-modal.component.html
+++ b/client/src/app/groups/group-manage/group-products/new-product-modal/new-product-modal.component.html
@@ -52,7 +52,7 @@
         </ion-col>
       </ion-row>
 
-      <ion-row>
+      <!-- <ion-row>
         <ion-col size="12" size-sm="6" offset-sm="3">
           <ion-item>
             <ion-label position="floating">Currency</ion-label>
@@ -61,6 +61,24 @@
               [ngModel]="productCurrency"
               name="product-currency"
               required></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row> -->
+
+      <ion-row>
+        <ion-col size="12" size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Currency</ion-label>
+            <ion-select
+              [(ngModel)]="productCurrency"
+              name="product-currency"
+              multiple="false"
+              okText="OK"
+              cancelText="Cancel">
+              <ion-select-option value="eur">EUR</ion-select-option>
+              <ion-select-option value="rup">RUP</ion-select-option>
+              <ion-select-option value="usd">USD</ion-select-option>
+            </ion-select>
           </ion-item>
         </ion-col>
       </ion-row>
