--- a/client/src/app/groups/groups.page.html
+++ b/client/src/app/groups/groups.page.html
@@ -20,6 +20,7 @@
       <ion-col size="12" size-sm="8" offset-sm="2">
         <ion-list>
           <ion-item
+            class="item"
             *ngFor="let group of groups"
             detail
             [routerLink]="['/', 'groups', 'detail', group.id]">
