--- a/client/src/app/groups/new-group-modal/new-group-modal.component.html
+++ b/client/src/app/groups/new-group-modal/new-group-modal.component.html
@@ -39,11 +39,16 @@
         <ion-col size="12" size-sm="6" offset-sm="3">
           <ion-item>
             <ion-label position="floating">Group's Main Currency</ion-label>
-            <ion-input
-              type="text"
+            <ion-select
               [ngModel]="groupCurrency"
               name="group-currency"
-              required></ion-input>
+              value="rup"
+              okText="OK"
+              cancelText="Cancel">
+              <ion-select-option value="eur">EUR</ion-select-option>
+              <ion-select-option value="rup">RUP</ion-select-option>
+              <ion-select-option value="usd">USD</ion-select-option>
+            </ion-select>
           </ion-item>
         </ion-col>
       </ion-row>
