--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <form #f="ngForm" (ngSubmit)="onLogin(f)">
+  <form #f="ngForm" (ngSubmit)="onLogin()">
     <ion-grid>
       <ion-row>
         <ion-col size="12" size-sm="6" offset-sm="3">
