--- a/client/src/app/auth/signup/signup.component.html
+++ b/client/src/app/auth/signup/signup.component.html
@@ -1,5 +1,6 @@
 <ion-content>
-  <form #f="ngForm" (ngSubmit)="onSignup(f)">
+  <!-- <form #f="ngForm" (ngSubmit)="onSignup(f)"> -->
+  <form #f="ngForm" (ngSubmit)="onSignup()">
     <ion-grid>
       <ion-row>
         <ion-col size="12" size-sm="6" offset-sm="3">
@@ -12,6 +13,14 @@
                 name="email"
                 required
                 email></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Username</ion-label>
+              <ion-input
+                type="text"
+                ngModel
+                name="name"
+                required></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Password</ion-label>
