--- a/client/src/app/groups/groups.page.html
+++ b/client/src/app/groups/groups.page.html
@@ -18,7 +18,15 @@
   <ion-grid class="ion-margin-top">
     <ion-row class="ion-margin-top">
       <ion-col size="12" size-sm="8" offset-sm="2">
-        <ion-list>
+        <ion-card *ngIf="groups && !groups.length">
+          <ion-card-header>
+            Oops!
+          </ion-card-header>
+          <ion-card-content>
+            It seems you are not a member of any group;
+          </ion-card-content>
+        </ion-card>
+        <ion-list *ngIf="groups && groups.length">
           <ion-item
             class="item"
             *ngFor="let group of groups"
