--- a/client/src/app/orders/orders-list/orders-list.page.html
+++ b/client/src/app/orders/orders-list/orders-list.page.html
@@ -11,7 +11,15 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
-        <ion-list>
+        <ion-card *ngIf="archiveIsEmpty">
+          <ion-card-header>
+            Oops!
+          </ion-card-header>
+          <ion-card-content>
+            It seems you have never placed any orders for this group
+          </ion-card-content>
+        </ion-card>
+        <ion-list *ngIf="!archiveIsEmpty">
           <ion-item
             *ngFor="let order of orders"
             detail
