--- a/client/src/app/orders/orders.page.html
+++ b/client/src/app/orders/orders.page.html
@@ -11,7 +11,7 @@
 
   <ion-card>
     <ion-card-content>
-      Deadline set to: {{ group.deadline }}
+      Deadline set to: {{ formatDate(group.deadline) }}
     </ion-card-content>
   </ion-card>
 
