--- a/client/src/app/groups/group-manage/group-infos/group-infos.component.html
+++ b/client/src/app/groups/group-manage/group-infos/group-infos.component.html
@@ -1,18 +1,8 @@
-<!-- [disabled]="!f.valid || !datesValid()" -->
-
 <form #f="ngForm" (ngSubmit)="onUpdateGroup()">
 
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="6" offset-sm="3">
-        <ion-button
-          color="secondary"
-          type="button"
-          (click)="onCancel()">Cancel Changes</ion-button>
-        <ion-button
-          color="primary"
-          [disabled]="!f.valid || !f.touched || !formIsValid"
-          type="submit">Save Changes</ion-button>
         <ion-button
           color="danger"
           type="button"
@@ -47,15 +37,19 @@
     </ion-row>
     <ion-row>
       <ion-col size="12" size-sm="6" offset-sm="3">
-        <ion-item>
-          <ion-label position="floating">Group's Manager</ion-label>
-          <ion-input
-            type="text"
-            disabled="true"
-            [ngModel]="groupManager"
-            name="manager-name"
-            required></ion-input>
-        </ion-item>
+        <ion-button
+          color="secondary"
+          type="button"
+          (click)="onCancel()">Cancel Changes</ion-button>
+        <ion-button
+          color="primary"
+          [disabled]="!f.valid || !f.touched || !formIsValid"
+          type="submit">Save Changes</ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-sm="6" offset-sm="3" class="ion-text-center">
+        <ion-text>Managed by: {{ managerName }}</ion-text>
       </ion-col>
     </ion-row>
   </ion-grid>
