--- a/client/src/app/groups/group-manage/group-products/group-products.component.html
+++ b/client/src/app/groups/group-manage/group-products/group-products.component.html
@@ -1,34 +1,69 @@
 <form [formGroup]="itemsForm">
+
+  <div *ngFor="let item of items"
+    [formGroupName]="item.name"
+    class="ion-margin-bottom item">
+    <ion-row>
+      <ion-col size="10">
+        <ion-input
+          class="ion-no-padding"
+          type="text"
+          formControlName="name"></ion-input>
+      </ion-col>
+      <ion-col size="2" class="ion-text-right">
+        <ion-col size="1">
+          <ion-icon name="trash-outline" (click)="onDeleteItem(item.id)"></ion-icon>
+        </ion-col>
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="ion-align-items-baseline">
+      <ion-col size="3" class="ion-text-left">
+        <ion-select
+          class="ion-no-padding"
+          okText="OK"
+          formControlName="currency"
+          cancelText="Cancel">
+          <ion-select-option value="eur">EUR</ion-select-option>
+          <ion-select-option value="rup">RUP</ion-select-option>
+          <ion-select-option value="usd">USD</ion-select-option>
+        </ion-select>
+      </ion-col>
+      <ion-col size="4" class="ion-text-left">
+        <ion-input
+          formControlName="price"
+          type="number"></ion-input>
+      </ion-col>
+      <ion-col size="3" class="ion-text-right">
+        <ion-label>Available:</ion-label>
+      </ion-col>
+      <ion-col size="2">
+        <ion-input
+          formControlName="amount"
+          type="number"></ion-input>
+      </ion-col>
+    </ion-row>
+  </div>
+
   <ion-grid>
-    <ion-row *ngFor="let item of items"
-      [formGroupName]="item.name">
-      <ion-col size="12" size-sm="6" offset-sm="3">
-        <ion-item>
-          <ion-input
-            type="text"
-            formControlName="name"></ion-input>
-          <ion-input
-            type="text"
-            formControlName="currency"></ion-input>
-          <ion-input
-            type="number"
-            formControlName="price"></ion-input>
-          <ion-input
-            type="number"
-            formControlName="amount"></ion-input>
-        </ion-item>
-        <ion-icon name="trash-outline" (click)="onDeleteItem(item.id)"></ion-icon>
+    <ion-row>
+      <ion-col size="12" size-sm="6" offset-sm="3" class="ion-text-center">
+        <ion-button
+          color="primary"
+          (click)="onCreateNewProduct()">
+          <ion-icon name="add-outline"></ion-icon>
+        </ion-button>
       </ion-col>
     </ion-row>
 
     <ion-row>
-      <ion-col size="12" size-sm="6" offset-sm="3">
-        <ion-button (click)="onCreateNewProduct()">Add New Item</ion-button>
+      <ion-col>
+        <hr>
       </ion-col>
     </ion-row>
 
     <ion-row formGroupName="deadline">
-      <ion-col>
+      <ion-col size="12" class="ion-text-center">
         <ion-datetime
           placeholder="Select deadline date"
           display-format="D MMM YYYY H:mm"
@@ -38,21 +73,27 @@
     </ion-row>
 
     <ion-row>
-      <ion-col size="12" size-sm="6" offset-sm="3">
+      <ion-col>
+        <hr>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="6" class="ion-text-right">
         <ion-button
           color="secondary"
           type="button"
           (click)="onCancel()">Cancel</ion-button>
+      </ion-col>
+      <ion-col size="6" class="ion-text-left">
         <ion-button
+          class="save"
           color="primary"
           type="button"
           disabled="{{ items.length < 1 }}"
           (click)="onSaveChanges()">Save</ion-button>
-        <ion-button
-          color="primary"
-          type="button"
-          (click)="onSaveChangesAndInform()">Save and Inform</ion-button>
       </ion-col>
+
     </ion-row>
 
   </ion-grid>
