client: add bg images to groups thumbnail

--- a/client/src/app/groups/groups.page.html
+++ b/client/src/app/groups/groups.page.html
@@ -33,7 +33,7 @@
             detail
             [routerLink]="['/', 'groups', 'detail', group.id]">
             <ion-thumbnail slot="start">
-              <ion-img [src]=""></ion-img>
+              <ion-img [src]="group.image"></ion-img>
             </ion-thumbnail>
             <ion-label>
               <h2>{{ group.name }}</h2>
