client UI auth flow

--- a/client/src/app/auth/auth.page.html
+++ b/client/src/app/auth/auth.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>{{ isLogin ? 'Login' : 'Signup' }}</ion-title>
+    <ion-buttons slot="end">
+      <ion-img src="assets/logo.png"></ion-img>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
