--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -192,6 +192,7 @@
 
   .md body {
     --ion-background-color: #121212;
+    // --ion-background-color: transparent;
     --ion-background-color-rgb: 18,18,18;
 
     --ion-text-color: #ffffff;
