--- a/client/src/app/groups/group-manage/group-products/group-products.component.html
+++ b/client/src/app/groups/group-manage/group-products/group-products.component.html
@@ -66,7 +66,7 @@
       <ion-col size="12" class="ion-text-center">
         <ion-datetime
           placeholder="Select deadline date"
-          display-format="D MMM YYYY H:mm"
+          display-format="D MMM YYYY H:mm a"
           picker-format="D MMM YYYY H:mm"
           formControlName="deadlineDate"></ion-datetime>
       </ion-col>
