--- a/client/src/app/groups/groups.page.html
+++ b/client/src/app/groups/groups.page.html
@@ -10,7 +10,7 @@
 <ion-content>
 
   <ion-fab vertical="top" horizontal="end" edge="true" slot="fixed">
-    <ion-fab-button (click)="onCreateGroup()">
+    <ion-fab-button (click)="onLaunchCreateGroupModal()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
