--- a/client/src/app/groups/group-detail/group-detail.page.html
+++ b/client/src/app/groups/group-detail/group-detail.page.html
@@ -3,11 +3,11 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/groups"></ion-back-button>
     </ion-buttons>
-    <ion-title class="ion-text-center">{{ loading ? null : group.name }}</ion-title>
+    <ion-title class="ion-text-center">{{ loadingPage ? null : group.name }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="!loading">
+<ion-content *ngIf="!loadingPage">
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-md="8" offset-md="2">
