refactor: connect group infos page to NgRx

--- a/client/src/app/groups/group-manage/group-infos/group-infos.component.html
+++ b/client/src/app/groups/group-manage/group-infos/group-infos.component.html
@@ -43,7 +43,7 @@
           (click)="onCancel()">Cancel Changes</ion-button>
         <ion-button
           color="primary"
-          [disabled]="!f.valid || !f.touched || !formIsValid"
+          [disabled]="!f.valid || f.pristine"
           type="submit">Save Changes</ion-button>
       </ion-col>
     </ion-row>
